* config/h8300/h8300.c (dosize): Change to 	h8300_emit_stack_adjustment.  Update callers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75835 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-13  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/h8300/h8300.c (dosize): Change to
+	h8300_emit_stack_adjustment.  Update callers.
+
+2004-01-13  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/h8300/h8300.md (movstrictqi): Add an alternative with
 	the source being post_inc.  Tighten the predicate for the
 	destination to register_operand.
