--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* cxxfilt.c: Remove unused file.
+
 2004-01-14  Jan Hubicka  <jh@suse.cz>
 
 	Partial fix to PR c++/12850
