--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/12335
+	* g++.dg/parse/dtor3.C: New test.
+
 2004-01-13  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/12709
