--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* config/i386/i386.md (*addqi_1_slp): Do not access operands[2].
+
 2004-01-13  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/iq2000/iq2000-protos.h: Fix comment formatting.
