--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-14  Danny Smith  <dannysmith@users,sourceforge.net>
+
+	PR c++/9021
+  	PR c++/11005
+	* parser.c (cp_parser_elaborated_type_specifier): Warn about
+	attributes and discard.
+	* decl.c (xref_tag): Don't overwite existing attributes with
+	NULL_TREE.
+
 2004-01-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/12335
