--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	 * g++.dg/ext/attrib9.C: Add dg-warnings.
+
 2004-01-14  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/12335
