--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-14  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+	Backport from mainline
+	2004-01-05  Mark Mitchell  <mark@codesourcery.com>
+ 
+	PR c++/12816
+	* class.c (build_vtbl_ref_1): Do not unconditionally mark vtable
+	references as constant.	
+	
 2004-01-11  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
 	PR c++/13544
