--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* gcc.dg/ppc64-abi-1.c: New test.
+
 2004-01-14  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	 * g++.dg/ext/attrib9.C: Add dg-warnings.
