PR c++/12850 	* pt.c (instantiate_decl):  Do not increase function_depth.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75859 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Jan Hubicka  <jh@suse.cz>
+
+	PR c++/12850
+	* pt.c (instantiate_decl):  Do not increase function_depth.
+
 2004-01-14  Danny Smith  <dannysmith@users,sourceforge.net>
 
 	PR c++/9021
