gcc/ 2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
	* Makefile.in: Define MAINT from --enable-maintainer-mode.

gcc/ada/
2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in: Only regenerate texi files if --enable-maintainer-mode.\


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* Makefile.in: Define MAINT from --enable-maintainer-mode.
+
 2004-01-14  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* gcc/config/rs6000/rs6000.c (rs6000_stack_info)
