* alias.c (get_alias_set):  Initialize alias set to 0 when subset is 	impossible.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75861 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Jan Hubicka  <jh@suse.cz>
+
+	* alias.c (get_alias_set):  Initialize alias set to 0 when subset is
+	impossible.
+
 2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Makefile.in: Define MAINT from --enable-maintainer-mode.
