* config.gcc (with_arch): Add armv6. 	* config/arm/arm.h: Rename TARGET_CPU_*_s to TARGET_CPU_*s. 	* config/arm/arm.c (arm_overrride_options): Ditto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75864 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-01-14  Paul Brook  <paul@codesourcery.com>
+
+	* config.gcc (with_arch): Add armv6.
+	* config/arm/arm.h: Rename TARGET_CPU_*_s to TARGET_CPU_*s.
+	* config/arm/arm.c (arm_overrride_options): Ditto.
+
 2004-01-08  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.c (FL_ARCH3M): Renamed from FL_FAST_MULT.
