* regrename.c (find_oldest_value_reg): If the replacement uses multiple hard registers, check that all of them are in CLASS.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75867 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Richard Earnshaw  <rearnsha@arm.com>
+
+	* regrename.c (find_oldest_value_reg): If the replacement uses 
+	multiple hard registers, check that all of them are in CLASS.
+
 2004-01-14  Jan Hubicka  <jh@suse.cz>
 
 	* alias.c (get_alias_set):  Initialize alias set to 0 when subset is
