* config/m32r/m32r.md: Use GEN_INT instead of gen_rtx 	(CONST_INT, VOIDmode, ...).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/m32r/m32r.md: Use GEN_INT instead of gen_rtx
+	(CONST_INT, VOIDmode, ...).
+
 2004-01-14  Richard Earnshaw  <rearnsha@arm.com>
 
 	* regrename.c (find_oldest_value_reg): If the replacement uses 
