--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -814,7 +814,7 @@
   "
 {
   rtx op0   = gen_lowpart (SImode, operands[0]);
-  rtx shift = gen_rtx (CONST_INT, VOIDmode, 24);
+  rtx shift = GEN_INT (24);
 
   operands[2] = gen_ashlsi3 (op0, op0, shift);
   operands[3] = gen_ashrsi3 (op0, op0, shift);
@@ -840,7 +840,7 @@
   "
 {
   rtx op0   = gen_lowpart (SImode, operands[0]);
-  rtx shift = gen_rtx (CONST_INT, VOIDmode, 24);
+  rtx shift = GEN_INT (24);
 
   operands[2] = gen_ashlsi3 (op0, op0, shift);
   operands[3] = gen_ashrsi3 (op0, op0, shift);
@@ -866,7 +866,7 @@
   "
 {
   rtx op0   = gen_lowpart (SImode, operands[0]);
-  rtx shift = gen_rtx (CONST_INT, VOIDmode, 16);
+  rtx shift = GEN_INT (16);
 
   operands[2] = gen_ashlsi3 (op0, op0, shift);
   operands[3] = gen_ashrsi3 (op0, op0, shift);
