* regrename.c (find_oldest_value_reg): Fix a warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75871 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* regrename.c (find_oldest_value_reg): Fix a warning.
+
 2004-01-14  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR bootstrap/12527
