PR target/9365         * sh.c (gen_block_redirect): Add special handling of RETURN.         (gen_far_branch) Don't call gen_stuff_delay_slot if there is no         far branch target (i.e. it's a return).
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75873 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-14  J"orn Rennecke <joern.rennecke@superh.com>
+
+	PR target/9365
+	* sh.c (gen_block_redirect): Add special handling of RETURN.
+	(gen_far_branch) Don't call gen_stuff_delay_slot if there is no
+	far branch target (i.e. it's a return).
+
 2004-01-14  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* gcc/config/rs6000/rs6000.c (rs6000_stack_info)
