* config/mn10300/mn10300.h (STRUCT_VALUE): Change to 0.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75882 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/mn10300/mn10300.h (STRUCT_VALUE): Change to 0.
+
+2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/alpha/alpha.h (STRUCT_VALUE): Remove.
 	* config/alpha/vms.h (STRUCT_VALUE_REGNUM): Remove #undef.
 	(STRUCT_VALUE): Remove.
