--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-14  Richard Henderson  <rth@redhat.com>
+
+	PR c++/12491
+	* except.c (struct eh_region): Add u.fixup.resolved.
+	(resolve_one_fixup_region): Split out from ...
+	(resolve_fixup_regions): ... here.
+
 2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/mn10300/mn10300.h (STRUCT_VALUE): Change to 0.
