PR debug/13231         * dwarf2out.c (dwarf2out_stack_adjust): Skip prologue and epilogue         instructions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75884 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-14  Richard Henderson  <rth@redhat.com>
 
+	PR debug/13231
+	* dwarf2out.c (dwarf2out_stack_adjust): Skip prologue and epilogue
+	instructions.
+
+2004-01-14  Richard Henderson  <rth@redhat.com>
+
 	PR c++/12491
 	* except.c (struct eh_region): Add u.fixup.resolved.
 	(resolve_one_fixup_region): Split out from ...
