* calls.c: Replace STRICT_ARGUMENT_NAMING in comments with 	targetm.calls.strict_argument_naming(). 	* target.h: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75886 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* calls.c: Replace STRICT_ARGUMENT_NAMING in comments with
+	targetm.calls.strict_argument_naming().
+	* target.h: Likewise.
+
 2004-01-14  Richard Henderson  <rth@redhat.com>
 
 	PR debug/13231
