PR c++/8856 	* parser.c (cp_parser_template_name): Don't try to parse a 	conversion-function-id, as it cannot be a template-name. 	(cp_parser_simple_type_specifier): Check for invalid template-ids 	even after a built-in type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75897 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/8856
+	* parser.c (cp_parser_template_name): Don't try to parse a 
+	conversion-function-id, as it cannot be a template-name.
+	(cp_parser_simple_type_specifier): Check for invalid template-ids
+	even after a built-in type.
+
 2004-01-14  Jan Hubicka  <jh@suse.cz>
 
 	PR c++/12850
