--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/8856
+	* g++.dg/parse/casting-operator2.C: New test.
+	* g++.old-deja/g++.pt/explicit83.C: Remove.
+
 2004-01-14  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* gcc.dg/label-compound-stmt-1.c: New test.
