2004-01-14  Adam Fedor  <fedor@gnu.org>
        PR libobjc/12155
        * selector.c (__objc_register_instance_methods_to_class): Free
        new_list if not used.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75899 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-14  Adam Fedor  <fedor@gnu.org>
+
+	PR libobjc/12155
+	* selector.c (__objc_register_instance_methods_to_class): Free
+	new_list if not used.
+
 2004-01-09  Andrew Ruder  <aeruder@ksu.edu>
 
 	PR libobjc/11904
