boehm-gc/ 2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>
	* configure.in: Add in AC_PREREQ(2.13)

libf2c/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* libF77/configure.in: Update to AC_PREREQ(2.13)
	* libI77/configure.in: Update to AC_PREREQ(2.13)
	* libU77/configure.in: Update to AC_PREREQ(2.13)
	* libU77/configure: Regenerate.

libffi/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)

libjava/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)

libjava/libltdl
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Update to AC_PREREQ(2.57).  Delete FIXME comment.

zlib/
2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.in: Add in AC_PREREQ(2.13)


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75901 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* configure.in: Add in AC_PREREQ(2.13)
+	* libltdl/configure.ac: Update to AC_PREREQ(2.57).  Delete 
+	FIXME comment.
+
 2004-01-14  Nathan Bryant  <nbryant@optonline.net>
 	    Tom Tromey  <tromey@redhat.com>
 
