* doc/tm.texi (FUNCTION_VALUE): Fix a typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75902 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* doc/tm.texi (FUNCTION_VALUE): Fix a typo.
+
+2004-01-14  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* doc/tm.texi: Replace RETURN_IN_MEMORY with
 	TARGET_RETURN_IN_MEMORY.
 
