--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-15  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* Make-lang.in (ada.srcextra): Dummy entry.
+
 2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in: Only regenerate texi files if --enable-maintainer-mode.
