--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* system.h (STRUCT_VALUE_INCOMING_REGNUM): Poison.
+	* targhooks.c (default_struct_value_rtx): Don't use
+	STRUCT_VALUE_INCOMING_REGNUM.
+
 2004-01-15  Kelley Cook  <kcook@gcc.gnu.org>
 
 	PR bootstrap/12744
