* doc/invoke.texi: Update dump file names.  Fix a typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75908 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* doc/invoke.texi: Update dump file names.  Fix a typo.
+
+2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* builtins.c (expand_builtin_va_end): Don't use
 	EXPAND_BUILTIN_VA_END.
 	* system.h (EXPAND_BUILTIN_VA_END): Poison.
