* Update my email address.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75919 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-15  Steven Bosscher  <stevenb@suse.de>
+
+	* MAINTAINERS: Update my email address.
+
 2004-01-14  Loren J. Rittle <ljrittle@acm.org>
 
 	* Makefile.def (target_modules) [libtermcap, libiberty, zlib]: Stage.
