--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR c++/13594
+	PR c++/13658
+	* name-lookup.c (qualified_lookup_using_namespace): Search
+	strongly-associated namespaces first, and only then try other
+	namespaces.
+
 2004-01-15  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in (c++.srcextra): Dummy entry.
