--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR c++/13594
+	* g++.dg/lookup/strong-using-2.C: New.
+
 2004-01-15  Marcus Comstedt <marcus@mc.pp.se>
 	    Dan Kegel <dank@kegel.com>
 	    J"orn Rennecke <joern.rennecke@superh.com>
