--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,17 @@
 2004-01-15  Alexandre Oliva  <aoliva@redhat.com>
 
+	PR c++/13659
+	* name-lookup.c (validate_nonmember_using_decl): Take scope and
+	name by value, instead of computing them.
+	(do_local_using_decl, do_toplevel_using_decl): Add scope and name
+	arguments.  Pass them to validate_nonmember_using_decl.
+	* name-lookup.h (do_local_using_decl): Adjust.
+	(do_toplevel_using_decl): Likewise.
+	* parser.c (cp_parser_using_declaration): Likewise.
+	* pt.c (tsubst_expr): Likewise.
+
+2004-01-15  Alexandre Oliva  <aoliva@redhat.com>
+
 	PR c++/13594
 	PR c++/13658
 	* name-lookup.c (qualified_lookup_using_namespace): Search
