--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,31 @@
+2004-01-15  Olivier Hainque  <hainque@act-europe.fr>
+
+	* decl.c (gnat_to_gnu_entity, E_Variable): Retrieve the object size
+	also when not defining if a Size clause applies. That information is
+	not to be ignored.
+
+2004-01-15  Arnaud Charlet  <charlet@act-europe.fr>
+
+	* Makefile.in (install-gnatlib, gnatlib-shared-default): Set up
+	symbolic links for the shared gnat run time when needed.
+
+2004-01-15  Vasiliy Fofanov  <fofanov@act-europe.fr>
+
+	* memtrack.adb (Gmem_Initialize): check that gmem.out could be opened
+	for writing, and terminate with an error message if not.
+
+2004-01-15  Ed Schonberg  <schonberg@gnat.com>
+
+	* sem_attr.adb (Resolve_Attribute, case 'Access): Remove spurious
+	warning on an access to subprogram in an instance, when the target
+	type is declared in the same generic unit.
+	(Eval_Attribute): If 'access is known to fail accessibility check,
+	rewrite as a raise statement.
+
+2004-01-15  GNAT Script  <nobody@gnat.com>
+
+	* Make-lang.in: Makefile automatically updated
+
 2004-01-15  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in (ada.srcextra): Dummy entry.
