--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
 2004-01-15  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR optimization/13375
+	* gcse.c (handle_avail_expr): Just return if the source is not a
+	single set.
+
+2004-01-15  Richard Earnshaw  <rearnsha@arm.com>
 	    Daniel Jacobowitz  <drow@mvista.com>
 
 	* arm/lib1funcs.asm (ARM_FUNC_START): Correct interworking case.
