* config/h8300/h8300.c (h8300_return_in_memory): New. 	(TARGET_STRUCT_VALUE_RTX): Likewise. 	(TARGET_RETURN_IN_MEMORY): Likewise. 	* config/h8300/h8300.h (STRUCT_VALUE): Remove. 	(RETURN_IN_MEMORY): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75933 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.c (h8300_return_in_memory): New.
+	(TARGET_STRUCT_VALUE_RTX): Likewise.
+	(TARGET_RETURN_IN_MEMORY): Likewise.
+	* config/h8300/h8300.h (STRUCT_VALUE): Remove.
+	(RETURN_IN_MEMORY): Likewise.
+
 2004-01-15  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR optimization/13375
