2004-01-15  Toon Moene  <toon@moene.indiv.nluug.nl>
	* lang-specs.h: Enable preprocessing of source files
	ending in .F, .fpp, .FPP, .F90 and .F95.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75938 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* lang-specs.h: Enable preprocessing of source files
+	ending in .F, .fpp, .FPP, .F90 and .F95.
+
 2004-01-13  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR fortran/12912
