--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Andrew Pinski  <apinski@apple.com>
+
+	* config/rs6000/rs6000.c (uses_TOC): Wrap #if TARGET_ELF
+	around it.
+
 2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.c (h8300_return_in_memory): New.
