--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-15  J"orn Rennecke <joern.rennecke@superh.com>
+
+	PR optimization/10392
+	* reload.c (can_reload_into): New function.
+	(push_reload): Use it.
+
 2004-01-14  J"orn Rennecke <joern.rennecke@superh.com>
 
 	PR target/9365
