* config/m32r/m32r.md: Remove useless calls to gen_lowpart.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75944 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/m32r/m32r.md: Remove useless calls to gen_lowpart.
+
+2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/h8300/coff.h: Replace Hitachi with Renesas.
 	* config/h8300/elf.h: Likewise.
 	* config/h8300/h8300-protos.h: Likewise.
