--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -839,11 +839,10 @@
    (match_dup 3)]
   "
 {
-  rtx op0   = gen_lowpart (SImode, operands[0]);
   rtx shift = GEN_INT (24);
 
-  operands[2] = gen_ashlsi3 (op0, op0, shift);
-  operands[3] = gen_ashrsi3 (op0, op0, shift);
+  operands[2] = gen_ashlsi3 (operands[0], operands[0], shift);
+  operands[3] = gen_ashrsi3 (operands[0], operands[0], shift);
 }")
 
 (define_insn "extendhisi2"
@@ -865,11 +864,10 @@
    (match_dup 3)]
   "
 {
-  rtx op0   = gen_lowpart (SImode, operands[0]);
   rtx shift = GEN_INT (16);
 
-  operands[2] = gen_ashlsi3 (op0, op0, shift);
-  operands[3] = gen_ashrsi3 (op0, op0, shift);
+  operands[2] = gen_ashlsi3 (operands[0], operands[0], shift);
+  operands[3] = gen_ashrsi3 (operands[0], operands[0], shift);
 }")
 
 ;; Arithmetic instructions.
