--- a/tree-ssa-20020619-branch/libmudflap/ChangeLog
+++ b/tree-ssa-20020619-branch/libmudflap/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-15  Frank Ch. Eigler  <fche@redhat.com>
+
+	* testsuite/libmudflap.c/pass44.c: New test.
+
 2004-01-12  Frank Ch. Eigler  <fche@redhat.com>
 
 	* testsuite/libmudflap.c/fail{28,29,30}.c: New tests.
